--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     
     <!-- SEO Meta Tags -->
+    <!-- Structured Data: DARI Organization for AI and Search Engines -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "DARI Organization",
+      "url": "https://dariorganization.com",
+      "logo": "https://dariorganization.com/dari_logo.png",
+      "description": "DARI is a next-generation platform for secure, instant international payments using USDC and USDT, with full KYC/AML compliance, 24/7 availability, and bank-level security.",
+      "email": "info@dariorganization.com",
+      "sameAs": [
+        "https://x.com/dari",
+        "https://www.linkedin.com/company/dariorganization",
+        "https://www.instagram.com/dariorganization/"
+      ],
+      "founder": {
+        "@type": "Person",
+        "name": "Abhiram Sakaray",
+        "url": "https://www.linkedin.com/in/abhiramsakaray/"
+      },
+      "contactPoint": [{
+        "@type": "ContactPoint",
+        "email": "info@dariorganization.com",
+        "contactType": "customer support",
+        "availableLanguage": ["English"]
+      }],
+      "areaServed": "Worldwide",
+      "foundingDate": "2024-01-01",
+      "serviceType": [
+        "International Payments",
+        "Stablecoin Transfers",
+        "KYC/AML Compliance",
+        "Cross-Border Transactions",
+        "Digital Wallet"
+      ]
+    }
+    </script>
+    <!-- Structured Data: Abhiram Sakaray (Person) for AI and Search Engines -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Abhiram Sakaray",
+      "jobTitle": "Founder & Visionary of DARI Organization",
+      "description": "At just 18 years old, Abhiram Sakaray founded DARI with a bold vision to transform digital payments and stablecoin adoption globally. As the creator of a next-generation stablecoin wallet and payment ecosystem, he is pioneering secure, instant, and borderless transactions that bridge traditional banking with the future of decentralized finance.",
+      "email": "abhiram@dariorganization.com",
+      "url": "https://www.linkedin.com/in/abhiramsakaray/",
+      "sameAs": [
+        "https://www.linkedin.com/in/abhiramsakaray/",
+        "https://twitter.com/abhiramsakaray",
+        "https://instagram.com/abhiramsakaray"
+      ],
+      "alumniOf": {
+        "@type": "Organization",
+        "name": "DARI Organization",
+        "url": "https://dariorganization.com"
+      }
+    }
+    </script>
   <title>DARI - Modern Digital Wallet | USDC & USDT Payments</title>
   <meta name="description" content="DARI is a secure, KYC-compliant platform supporting USDC and USDT for instant international payments. Send money anywhere, anytime with 24/7 availability, low fees, and bank-level security. Launching Soon - Join the waitlist!" />
   <meta name="keywords" content="stablecoin, USDC, USDT, international payments, cross-border payments, cryptocurrency, digital payments, KYC compliant, AML compliant, blockchain payments, instant transfers, low fees" />
@@ -92,7 +151,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
     <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
   </body>
 </html>
