WIP: Save work before cleaning history

--- a/server/emailTemplates/waitlist.html
+++ b/server/emailTemplates/waitlist.html
@@ -105,8 +105,6 @@
 <body>
   <main class="shell" aria-labelledby="title">
     <a class="logo" href="https://dariorganization.com/" aria-label="DARI Home">
-      <span class="logo-mark" aria-hidden="true">D</span>
-      <span>DARI</span>
     </a>
 
     <section class="card">
@@ -129,7 +127,7 @@
         <div class="avatar" aria-hidden="true">AS</div>
         <div class="meta">
           <strong>Abhiram Sakaray</strong>
-          <small>Founder &amp;, DARI Organization</small>
+          <small>Founder, DARI Organization</small>
           <small><a class="mailto" href="mailto:abhiram@dariorganization.com">abhiram@dariorganization.com</a></small>
         </div>
       </div>
